--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AWESOME PRIZE WINNING PROJECT! 😄</title>
+    <title>COVID Tracker</title>
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/dropdown.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato&display=swap"
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/transition.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="new-style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
-
-    <script
-      src="https://kit.fontawesome.com/443d6ce95e.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="map-style.js"></script>
     <script src="script.js"></script>
+    <script src="charts.js"></script>
   </head>
   <body>
     <div class="container-fluid main">
@@ -29,28 +34,20 @@
         <div class="col-8">
           <div class="row header-container">
             <div class="col title-container">
-              <h2>AWESOME PRIZE WINNING PROJECT! 😄</h2>
+              <h2>COVID-19 Tracker</h2>
             </div>
             <div class="col search-container">
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1"
-                    ><i class="fas fa-search"></i
-                  ></span>
-                </div>
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Search Country"
-                  aria-label="Search Country"
-                  aria-describedby="basic-addon1"
-                />
+              <div class="ui fluid search selection dropdown">
+                <input type="hidden" name="country" />
+                <i class="dropdown icon"></i>
+                <div class="default text">Select Country</div>
+                <div class="menu"></div>
               </div>
             </div>
           </div>
           <div class="row stats-container">
             <div class="col">
-              <div class="card cases">
+              <div class="card cases" onclick="changeDataSelection('cases')">
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Coronavirus Cases</h6>
@@ -62,7 +59,10 @@
               </div>
             </div>
             <div class="col">
-              <div class="card recovered">
+              <div
+                class="card recovered"
+                onclick="changeDataSelection('recovered')"
+              >
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Recovered</h6>
@@ -76,7 +76,7 @@
               </div>
             </div>
             <div class="col">
-              <div class="card deaths">
+              <div class="card deaths" onclick="changeDataSelection('deaths')">
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Deaths</h6>
@@ -89,17 +89,18 @@
             </div>
           </div>
           <div class="row map-container mt-3">
-            <div id="style-selector-control" class="map-control">
-              <select id="style-selector" class="selector-control">
-                <option value="default">Default</option>
-                <option value="silver" selected="selected">Silver</option>
-                <option value="night">Night mode</option>
-                <option value="retro">Retro</option>
-                <option value="hiding">Hide features</option>
-              </select>
+            <div class="col">
+              <div id="map"></div>
             </div>
-            <div id="map"></div>
           </div>
+          <!-- <div class="row chart-container mt-3">
+          <div class="col linear-chart p-3 mr-3">
+            <canvas id="myChart"></canvas>
+          </div>
+          <div class="col p-3">
+            <canvas id="myPieChart"></canvas>
+          </div>
+        </div> -->
         </div>
         <div class="col-4 side-panel-container my-3">
           <div class="cases-table-container">
@@ -110,18 +111,67 @@
               </table>
             </div>
           </div>
-          <div class="chart-container mt-3"></div>
+          <div class="chart-container mt-3">
+            <h4>Total Cases Globally</h4>
+            <div class="linear-chart p-3">
+              <canvas id="myChart"></canvas>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <!-- <div id="nav">
+
+    </div> -->
+    <!-- <div class="map-info">
+        <div id="map"></div>
+
+    </div> -->
+    <!-- <div class="data-info">
+      <div class="country-data">
+        <table class="table table-striped table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Country Name</th>
+              <th scope="col">Cases</th>
+              <th scope="col">Recovered</th>
+              <th scope="col">Deaths</th>
+            </tr>
+          </thead>
+          <tbody id="table-data">
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+        </table>
+      </div> -->
+    <!-- <div class="chart-data">
+        <canvas id="myChart"></canvas>
+      </div>
+    </div> -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=<YOUR-API-KEY&callback=initMap"
       async
       defer
     ></script>
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"
     ></script>
     <script
@@ -130,9 +180,11 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/dropdown.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/transition.min.js"></script>
   </body>
 </html>
