--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="map-style.js"></script>
     <script src="script.js"></script>
-    <script src="charts.js"></script>
+    <script src="chart.js"></script>
   </head>
   <body>
     <div class="container-fluid main">
@@ -45,20 +45,23 @@
               </div>
             </div>
           </div>
-          <div class="row stats-container">
-            <div class="col">
-              <div class="card cases" onclick="changeDataSelection('cases')">
+          <div id="stats-cards" class="row stats-container">
+            <div class="col card-container">
+              <div
+                class="card active cases"
+                onclick="changeDataSelection('cases')"
+              >
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Coronavirus Cases</h6>
-                  <h3 class="card-subtitle mb-2 total-number">1,436,886</h3>
-                  <div class="text-muted font-weight-bold total cases-total">
-                    1.69M Total
-                  </div>
+                  <h3 class="card-subtitle mb-2 total-number"></h3>
+                  <div
+                    class="text-muted font-weight-bold total cases-total"
+                  ></div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col card-container">
               <div
                 class="card recovered"
                 onclick="changeDataSelection('recovered')"
@@ -66,24 +69,22 @@
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Recovered</h6>
-                  <h3 class="card-subtitle mb-2 recovered-number">302,964</h3>
+                  <h3 class="card-subtitle mb-2 recovered-number"></h3>
                   <div
                     class="text-muted font-weight-bold total recovered-total"
-                  >
-                    1.69M Total
-                  </div>
+                  ></div>
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col card-container">
               <div class="card deaths" onclick="changeDataSelection('deaths')">
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Deaths</h6>
-                  <h3 class="card-subtitle mb-2 deaths-number">82,191</h3>
-                  <div class="text-muted font-weight-bold total deaths-total">
-                    1.69M Total
-                  </div>
+                  <h3 class="card-subtitle mb-2 deaths-number"></h3>
+                  <div
+                    class="text-muted font-weight-bold total deaths-total"
+                  ></div>
                 </div>
               </div>
             </div>
@@ -165,7 +166,7 @@
       </div>
     </div> -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=<YOUR-API-KEY&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=<Your-API-KEY>&callback=initMap"
       async
       defer
     ></script>
