--- a/index.html
+++ b/index.html
@@ -20,23 +20,24 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="new-style.css" />
+    <link rel="stylesheet" href="mobile.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="map-style.js"></script>
     <script src="script.js"></script>
-    <script src="chart.js"></script>
+    <script src="charts.js"></script>
   </head>
   <body>
-    <div class="container-fluid main">
-      <div class="row">
-        <div class="col-8">
+    <div class="container-fluid">
+      <div class="row main">
+        <div class="col-12 col-lg-8 d-flex flex-column">
           <div class="row header-container">
-            <div class="col title-container">
+            <div class="col-sm title-container">
               <h2>COVID-19 Tracker</h2>
             </div>
-            <div class="col search-container">
+            <div class="col-sm mt-3 mt-sm-0 search-container">
               <div class="ui fluid search selection dropdown">
                 <input type="hidden" name="country" />
                 <i class="dropdown icon"></i>
@@ -45,51 +46,56 @@
               </div>
             </div>
           </div>
-          <div id="stats-cards" class="row stats-container">
-            <div class="col card-container">
+          <div class="row stats-container">
+            <div class="col-12 col-sm-4 mb-3 mb-sm-0">
               <div
-                class="card active cases"
-                onclick="changeDataSelection('cases')"
+                class="card cases active"
+                onclick="changeDataSelection(this, 'cases')"
               >
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Coronavirus Cases</h6>
-                  <h3 class="card-subtitle mb-2 total-number"></h3>
-                  <div
-                    class="text-muted font-weight-bold total cases-total"
-                  ></div>
+                  <h3 class="card-subtitle mb-2 total-number">1,436,886</h3>
+                  <div class="text-muted font-weight-bold total cases-total">
+                    1.69M Total
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col card-container">
+            <div class="col-12 col-sm-4 mb-3 mb-sm-0">
               <div
                 class="card recovered"
-                onclick="changeDataSelection('recovered')"
+                onclick="changeDataSelection(this, 'recovered')"
               >
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Recovered</h6>
-                  <h3 class="card-subtitle mb-2 recovered-number"></h3>
+                  <h3 class="card-subtitle mb-2 recovered-number">302,964</h3>
                   <div
                     class="text-muted font-weight-bold total recovered-total"
-                  ></div>
+                  >
+                    1.69M Total
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="col card-container">
-              <div class="card deaths" onclick="changeDataSelection('deaths')">
+            <div class="col-12 col-sm-4 mb-3 mb-sm-0">
+              <div
+                class="card deaths"
+                onclick="changeDataSelection(this, 'deaths')"
+              >
                 <div class="tab-selection"></div>
                 <div class="card-body">
                   <h6 class="card-title">Deaths</h6>
-                  <h3 class="card-subtitle mb-2 deaths-number"></h3>
-                  <div
-                    class="text-muted font-weight-bold total deaths-total"
-                  ></div>
+                  <h3 class="card-subtitle mb-2 deaths-number">82,191</h3>
+                  <div class="text-muted font-weight-bold total deaths-total">
+                    1.69M Total
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="row map-container mt-3">
+          <div class="row map-container flex-grow-1 mt-3">
             <div class="col">
               <div id="map"></div>
             </div>
@@ -103,7 +109,9 @@
           </div>
         </div> -->
         </div>
-        <div class="col-4 side-panel-container my-3">
+        <div
+          class="col-12 col-lg-4 side-panel-container my-3 d-flex flex-column"
+        >
           <div class="cases-table-container">
             <h4>Live Cases by Country</h4>
             <div class="country-data">
@@ -112,7 +120,7 @@
               </table>
             </div>
           </div>
-          <div class="chart-container mt-3">
+          <div class="chart-container flex-grow-1 mt-3">
             <h4>Total Cases Globally</h4>
             <div class="linear-chart p-3">
               <canvas id="myChart"></canvas>
@@ -121,52 +129,8 @@
         </div>
       </div>
     </div>
-    <!-- <div id="nav">
-
-    </div> -->
-    <!-- <div class="map-info">
-        <div id="map"></div>
-
-    </div> -->
-    <!-- <div class="data-info">
-      <div class="country-data">
-        <table class="table table-striped table-dark">
-          <thead>
-            <tr>
-              <th scope="col">Country Name</th>
-              <th scope="col">Cases</th>
-              <th scope="col">Recovered</th>
-              <th scope="col">Deaths</th>
-            </tr>
-          </thead>
-          <tbody id="table-data">
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td>@twitter</td>
-            </tr>
-          </tbody>
-        </table>
-      </div> -->
-    <!-- <div class="chart-data">
-        <canvas id="myChart"></canvas>
-      </div>
-    </div> -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=<Your-API-KEY>&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap"
       async
       defer
     ></script>
