--- a/index.html
+++ b/index.html
@@ -21,13 +21,43 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="new-style.css" />
     <link rel="stylesheet" href="mobile.css" />
+    <!-- <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
     <script src="map-style.js"></script>
     <script src="script.js"></script>
-    <script src="charts.js"></script>
+    <script src="chart.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        var xml = $.ajax({
+          type: "GET",
+          url: "https://www.who.int/rss-feeds/news-english.xml",
+          dataType: "xml",
+          success: xmlParser,
+        });
+
+        function xmlParser(xml) {
+          $(xml)
+            .find("item")
+            .each(function () {
+              $("#container").append(
+                `<div class="item"><p>` +
+                  $(this).find("title").text() +
+                  `</p></div>`
+              );
+            });
+        }
+      });
+    </script>
   </head>
   <body>
     <div class="container-fluid">
@@ -54,11 +84,13 @@
               >
                 <div class="tab-selection"></div>
                 <div class="card-body">
-                  <h6 class="card-title">Coronavirus Cases</h6>
-                  <h3 class="card-subtitle mb-2 total-number">1,436,886</h3>
-                  <div class="text-muted font-weight-bold total cases-total">
-                    1.69M Total
-                  </div>
+                  <h6 class="card-title">
+                    <i class="fas fa-hospital-user"></i> Coronavirus Cases
+                  </h6>
+                  <h3 class="card-subtitle mb-2 total-number"></h3>
+                  <div
+                    class="text-muted font-weight-bold total cases-total"
+                  ></div>
                 </div>
               </div>
             </div>
@@ -69,13 +101,13 @@
               >
                 <div class="tab-selection"></div>
                 <div class="card-body">
-                  <h6 class="card-title">Recovered</h6>
-                  <h3 class="card-subtitle mb-2 recovered-number">302,964</h3>
+                  <h6 class="card-title">
+                    <i class="fas fa-running"></i> Recovered
+                  </h6>
+                  <h3 class="card-subtitle mb-2 recovered-number"></h3>
                   <div
                     class="text-muted font-weight-bold total recovered-total"
-                  >
-                    1.69M Total
-                  </div>
+                  ></div>
                 </div>
               </div>
             </div>
@@ -86,11 +118,11 @@
               >
                 <div class="tab-selection"></div>
                 <div class="card-body">
-                  <h6 class="card-title">Deaths</h6>
-                  <h3 class="card-subtitle mb-2 deaths-number">82,191</h3>
-                  <div class="text-muted font-weight-bold total deaths-total">
-                    1.69M Total
-                  </div>
+                  <h6 class="card-title"><i class="fas fa-bed"></i> Deaths</h6>
+                  <h3 class="card-subtitle mb-2 deaths-number"></h3>
+                  <div
+                    class="text-muted font-weight-bold total deaths-total"
+                  ></div>
                 </div>
               </div>
             </div>
@@ -128,17 +160,30 @@
           </div>
         </div>
       </div>
+      <div id="container" class="row main-info">
+        <!-- <div class="col newsfeed-container">
+          <div class="row newsfeed-title"><h1>News Updates</h1></div>
+          <div class="row newsfeed-body">News dsfjosdfijwefcsvoj</div>
+        </div>
+        <div class="col health">
+          <div class="row health-title">
+            <h1>Coronavirus Info:</h1>
+            <h2>Health & Safety</h2>
+          </div>
+          <div class="row health-body">Health and safety dsofjspdfj</div>
+        </div> -->
+      </div>
     </div>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=<YOUR_API_KEY>&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJ7VvobsIYLr3Pe6cTNUnIUvzgpV2Na-o&callback=initMap"
       async
       defer
     ></script>
-    <script
+    <!-- <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
       integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
